# mini-c-compiler

./: CMakeLists.txt  README.md
src/: ast.h  compiler.cpp  compiler.h  error.cpp  error.h  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h  semanalyzer.cpp  semanalyzer.h  util.h
test/: main.c  main.ll  main.s
